deployments/pathweb/grafana-mimir/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana-mimir
  labels:
    app.kubernetes.io/name: mimir 
    app.kubernetes.io/instance: grafana-mimir    
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir 
      app.kubernetes.io/instance: grafana-mimir 
  serviceName: mimir-headless
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mimir
        app.kubernetes.io/instance: grafana-mimir 
        app.kubernetes.io/part-of: memberlist 
    spec:
      containers:
      - name: mimir
        image: grafana/mimir:latest
        args:
          - -config.file=/config/mimir.yaml
          - -config.expand-env=true
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9095
          name: grpc
          protocol: TCP
        - containerPort: 7946
          name: http-memberlist
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /ready
            port: http
          initialDelaySeconds: 45
        readinessProbe:
          httpGet:
            path: /ready
            port: http
          initialDelaySeconds: 45
        volumeMounts:
        - name: mimir-data
          mountPath: /data
        - name: config
          mountPath: /config
      volumes:
        - name: config
          configMap:
            name: mimir-config
  volumeClaimTemplates:
  - metadata:
      name: mimir-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
