deployments/pathweb/grafana-mimir/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mimir-memberlist
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  publishNotReadyAddresses: true
  selector:
      app.kubernetes.io/name: mimir 
      app.kubernetes.io/instance: grafana-mimir 
      app.kubernetes.io/part-of: memberlist 
  ports:
  - name: tcp
    port: 7946
    protocol: TCP
    targetPort: http-memberlist
---
apiVersion: v1
kind: Service
metadata:
  name: mimir-headless
spec:
  clusterIP: None
  clusterIPs:
  - None
  selector:
      app.kubernetes.io/name: mimir 
      app.kubernetes.io/instance: grafana-mimir
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-mimir
spec:
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  - name: grpc
    port: 9095
    protocol: TCP
    targetPort: grpc
  selector:
      app.kubernetes.io/name: mimir 
      app.kubernetes.io/instance: grafana-mimir
