deployments/pathweb/grafana-mimir/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent-network-policy
  namespace: media-services
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/instance: grafana-mimir
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": traefik
    - matchLabels:
        "k8s:app": grafana
        "k8s:io.kubernetes.pod.namespace": home-network
    toPorts:
    - ports:
      - port: "8080"
  - fromEndpoints:
    - matchLabels:
        "k8s:app.kubernetes.io/name": mimir
        "k8s:app.kubernetes.io/instance": "grafana-mimir"
  - fromEndpoints:
    - matchLabels:
        "k8s:app.kubernetes.io/name": vmagent
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/api/v1/push"
